# unityfs-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
