[package]
name = "unityfs-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
unityfs = "0.1.0"
clap = { version = "4.6", features = ["derive"] }
image = "0.25"
texture2ddecoder = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.12"
memmap2 = "0.9"
indicatif = "0.18"

[profile.dev]
opt-level = 0

[profile.dev.package.unityfs]
opt-level = 3
[profile.dev.package.lz4_flex]
opt-level = 3
[profile.dev.package.lzma-rs]
opt-level = 3
[profile.dev.package.sevenz-rust2]
opt-level = 3
[profile.dev.package.lzma-rust2]
opt-level = 3
[profile.dev.package.zip]
opt-level = 3
[profile.dev.package.texture2ddecoder]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.flate2]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.brotli-decompressor]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.fdeflate]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
